# magic-workflow

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.ops.yml  docker-compose.podman.yml  docker-compose.yml  setup.ps1  setup.sh
MagicWorkflow_Docs/: README.md  mkdocs.yml  pyproject.toml
MagicWorkflow_Docs/docs/: air-gapped.md  architecture.md  backups.md  enterprise.md  index.md  install-local.md  install-rhel.md  install-server.md  kubernetes.md  monitoring.md  operations.md  sso.md  storage.md  troubleshooting.md  windows-iis.md
config/backup/: backup.sh
config/homer/: config.yml
config/iis/: web.config
config/keycloak/: .gitkeep
config/nextcloud/: nginx.conf
config/nextcloud/hooks/: configure.sh  install-apps.sh
config/prometheus/: prometheus.yml
config/promtail/: promtail-config.podman.yml  promtail-config.yml
config/proxy/: nginx.conf
config/proxy/templates/: 10-nextcloud.conf.template  20-mattermost.conf.template  30-collabora.conf.template  40-keycloak.conf.template  50-homer.conf.template  (+2 more)
config/systemd/: magic-workflow.service
helm/magic-workflow/: .helmignore  Chart.yaml  README.md  values-airgap.yaml  values-dev.yaml  values-openshift.yaml  values-prod.yaml  values.yaml
k8s/: README.md
scripts/: _oidc-test.php  configure.sh  doctor.sh  fetch-nc-apps.sh  healthcheck.sh  install-rhel.sh  install-server.sh  keycloak-realm.json.template  minio-init.sh  mirror-images.sh  office-connect.sh  sso-connect.sh  sso-info.sh  trust-cert.sh  urls.sh
scripts/lib/: engine.sh
(+28 files in other folders)
