[project]
name = "MagicWorkflow_Docs"
version = "0.1.0"
description = "Magic Workflow — self-hosted collaboration suite documentation (MkDocs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1,<2.0",
    "mkdocs-material>=9.6.19,<9.7.0",
    "mkdocs-print-site-plugin>=2.8",
]
